--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,28 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  border: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 /* These styles make the body full-height */
-html,
-body {
+
+html, body {
   height: 100%;
 }
+
 /* These styles disable body scrolling if you are using <ScrollView> */
+
 body {
   overflow: hidden;
 }
+
 /* These styles make the root element full-height */
+
 #root {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
   display: flex;
-  height: 100%;
+  height: 100vh;
 }
